CaseStage/force-app/main/default/objects/Opportunity/fields/EstimatedProjectCost__c.field-meta.xml
<CustomField>
    <fullName>EstimatedProjectCost__c</fullName>
    <label>Custo estimado do projeto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>