CaseStage/force-app/main/default/objects/Opportunity/fields/EstimatedProjectTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedProjectTime__c</fullName>
    <formula>TEXT(EndDate__c - StartDate__c) + &quot; dias&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo estimado do projeto</label>
    <type>Text</type>
</CustomField>