CaseStage/force-app/main/default/objects/Opportunity/fields/ProjectDetail__c.field-meta.xml
<CustomField>
    <fullName>ProjectDetail__c</fullName>
    <label>Detalhamento do projeto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>