CaseStage/force-app/main/default/objects/Opportunity/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data de início</label>
    <type>Date</type>
</CustomField>