CaseStage/force-app/main/default/objects/Opportunity/validationRules/CustoMaior.validationRule-meta.xml
<ValidationRule>
    <fullName>CustoMaior</fullName>
    <active>true</active>
    <errorConditionFormula>EstimatedProjectCost__c &gt;  ProposalValue__c</errorConditionFormula>
    <errorDisplayField>EstimatedProjectCost__c</errorDisplayField>
    <errorMessage>Custo do projeto não pode ser maior que proposta</errorMessage>
</ValidationRule>